Updated: Added linked image max-width style to prevent display column overflow

--- a/ezpublish_legacy/extension/ezecosystem/design/eze/stylesheets/override.css
+++ b/ezpublish_legacy/extension/ezecosystem/design/eze/stylesheets/override.css
@@ -190,4 +190,8 @@ pre {
 overflow: auto;
 }
 
+a img {
+max-width: 100%;
+}
+
 /* END */
